Get rid of overflow on the body—an issue in IE.

--- a/css/modules/_overrides.scss
+++ b/css/modules/_overrides.scss
@@ -1,5 +1,6 @@
 body {
   font-family: $font-family-sans-serif;
+  overflow-x: hidden;
 }
 
 p {
